[gd_scene load_steps=2 format=3 uid="uid://ccvth8cps05m4"]

[ext_resource type="Script" path="res://addons/smm/gui/popups/property/edit_property_popup.gd" id="1_kuay1"]

[node name="EditPropertyPopupPanel" type="PopupPanel"]
title = "Edit Property"
position = Vector2i(470, 250)
size = Vector2i(320, 80)
borderless = false
script = ExtResource("1_kuay1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="PropertyNameField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "property name..."
select_all_on_focus = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EditButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
